@startuml

[*] -> INITIAL
INITIAL --> STARTING : Node first txn when starting
STARTING --> ONLINE : Node saw own STARTING now go ONLINE
STARTING --> OFFLINE : Node was shut down while starting
ONLINE --> OFFLINE : Node gracefully shutting down
ONLINE --> DEAD : Node no longer heartbeating and marked DEAD
OFFLINE --> DEAD : Node left cluster

@enduml
